nocctv update graph paths

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -378,42 +378,42 @@ As a second measure, the same simulations were conducted without any CCTV infras
 \subsubsection{General observations}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/Application Throughputs.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Application Throughputs.png}
   \caption{Average throughput of the FTP and web browsing applications} \label{fig:app_throughput}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/Browser -average session duration.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/HTTP Response Time.png}
   \caption{Average browser session durations} \label{fig:browser_sess_dur}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/Application Packet Delays.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Application Packet Delays.png}
   \caption{Average delays of the video conference} \label{fig:app_pkt_delay}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/Application Packet Loss Rates.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Application Packet Loss Rates.png}
   \caption{Average packet loss rates of the video conference} \label{fig:app_pkt_loss}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/RAP -Average Queue Length.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Average Queue Lengths.png}
   \caption{Average queue length at the remote access point} \label{fig:rap_queue_len}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/Network Throughputs.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Network Throughputs.png}
   \caption{Network throughputs} \label{fig:net_throughput}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/Network Packet Drop Rates.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Network Packet Drop Rates.png}
   \caption{Packet drop rates at different points in the network} \label{fig:net_drop}
 \end{figure}
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.6\textwidth]{../matlab/images/finalnocctv/RAP -Number of collisions.png}
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Collisions at Access Point.png}
   \caption{Number of collisions in the WLAN, counted by the Remote Access Point} \label{fig:rap_collisions}
 \end{figure}
 
