--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -455,11 +455,11 @@ Additionally, limiting the bandwidth available to each individual user may impro
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{ l l }
   \textbf{Simulation Implementation} & Lotte \\
-  \textbf{Simulation Execution} & Alex \\
-  \textbf{Plotting} & Alex \\
+  \textbf{Simulation Execution} & Alexander \\
+  \textbf{Plotting} & Alexander \\
   \textbf{Introductory text} & Lotte \\
-  \textbf{Simulation Plan text} & Alex \\
-  \textbf{Evaluation with CCTV} & Alex \\
+  \textbf{Simulation Plan text} & Alexander \\
+  \textbf{Evaluation with CCTV} & Alexander \\
   \textbf{Evaluation without CCTV} & Lotte \\
 \end{tabularx}
 \end{table}
