some figure rearrangement

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -366,39 +366,33 @@ The steep increase of the drop rate at the main router indicates the impact of t
 These effects however have no impact on the drop rates of the WLAN. The monotonous increase is just due to the rising number of participants in the WLAN network causing more packets to be dropped.
 
 \subsection{Network without CCTV}
-As a second measure, the same simulations were conducted without any CCTV infrastructure present.
+As a second measure, the same simulations were conducted without any CCTV infrastructure present. This section analyzes the simulation results of this configuration. First, the overall network behavior is discussed. Then, it focuses on the influence of FTP and web browsing applications on the video conference. Finally, possible bottlenecks are identified.
 
 \subsubsection{General observations}
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=0.6\textwidth]{Figures/nocctv/Application_Throughputs.png}
-  \caption{Average throughput of the FTP and web browsing applications} \label{fig:app_throughput}
+  \caption{Average application throughput} \label{fig:app_throughput}
 \end{figure}
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Network_Throughputs.png}
+  \caption{Average network throughputs} \label{fig:net_throughput}
+\end{figure}
+
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=0.6\textwidth]{Figures/nocctv/HTTP_Response_Time.png}
   \caption{Average browser session durations} \label{fig:browser_sess_dur}
 \end{figure}
-\begin{figure}[!ht]
-  \centering
-  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Application_Packet_Delays.png}
-  \caption{Average delays of the video conference} \label{fig:app_pkt_delay}
-\end{figure}
-\begin{figure}[!ht]
-  \centering
-  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Application_Packet_Loss_Rates.png}
-  \caption{Average packet loss rates of the video conference} \label{fig:app_pkt_loss}
-\end{figure}
+
+
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=0.6\textwidth]{Figures/nocctv/Average_Queue_Lengths.png}
   \caption{Average queue length at the remote access point} \label{fig:rap_queue_len}
 \end{figure}
-\begin{figure}[!ht]
-  \centering
-  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Network_Throughputs.png}
-  \caption{Network throughputs} \label{fig:net_throughput}
-\end{figure}
+
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=0.6\textwidth]{Figures/nocctv/Network_Packet_Drop_Rates.png}
@@ -410,6 +404,11 @@ As a second measure, the same simulations were conducted without any CCTV infras
   \caption{Number of collisions in the WLAN, counted by the Remote Access Point} \label{fig:rap_collisions}
 \end{figure}
 
+
+\subsection{Overall network behavior}
+
+
+
 In order to analyze the influence of the FTP and web browsing applications on the video quality, it is useful that we first familiarize ourselves with the behavior of these applications.
 
 \paragraph{The Web browsers} are the parameter continuously changing throughout the simulation, as detailed in section \ref{sec:sim_plan}. Figure \ref{fig:app_throughput} shows that while the average overall HTTP traffic throughput rises with the number of web browsing clients, the average throughput achieved per browser, called ``Single HTTP throughput'' decreases. Additionally, fig. \ref{fig:browser_sess_dur} shows that the average session duration per browser increases with the number of clients, suggesting a higher latency for HTTP data to reach its destination. Notably, the session duration grows linearly starting at 20 clients.
@@ -417,7 +416,17 @@ In order to analyze the influence of the FTP and web browsing applications on th
 \paragraph{The FTP client}, shown in fig. \ref{fig:app_throughput} as well, experiences a %(TODO: characteristic)
 decline in throughput that is inverse to the increase in overall HTTP throughput. This can be explained with TCP's congestion control mechanisms: the more bandwidth is used by web browsing clients, the more the FTP client is forced to react by limiting its bandwidth in order to avoid collisions. In short: the FTP client will use up as much bandwidth as you let them.
 
-\paragraph{The video conference} has to be looked at as two distinct data flows: one going from the professor's laptop to the video conference laptop, and one traveling the other way. This becomes apparent when looking at figures \ref{fig:app_pkt_delay} and \ref{fig:app_pkt_loss}, which depict the average packet loss rate and delay for both directions in relation to the number of web browsing clients in the network.\\
+\begin{figure*}[!ht]%
+\makebox[\linewidth][c]{%
+    \centering
+    \subfloat[Packet loss rates]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Application_Packet_Loss_Rates.png} }}\hspace{-2.5em}%
+    \subfloat[Delays]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Application_Packet_Delays.png} }}%
+  }
+    \caption{Average packet loss and delays of the video conference}%
+    \label{fig:conf_data}%
+\end{figure*}
+
+\paragraph{The video conference} has to be looked at as two distinct data flows: one going from the professor's laptop to the video conference laptop, and one traveling the other way. This becomes apparent when looking at fig. \ref{fig:conf_data}, which depicts the average packet loss rate and delay for both directions in relation to the number of web browsing clients in the network.\\
 Since it is known that the that the delays of the radio and DFN links are 10 and 5 seconds respectively, all application delays must be at least 15s. While the delay at the professor's laptop stays very close to this ideal value and only increases marginally when adding new clients, the delay at the conference laptop appears to grow logarithmically. This can be explained by examining the average queue length at the remote access point (see fig. \ref{fig:rap_queue_len}): With an increased number of web browsing clients receiving large HTTP responses, the amount of data being sent from the access point into the WLAN increases as well. In combination with the outgoing traffic of the FTP client, increased contention for the wireless medium causes incoming data to aggregate at the access point, resulting in a higher delay at the conference laptop.\\
 % TODO: anhand des netzwerks ableiten dass die queue aus gründen logarithmisch (und nciht zB quadratisch) wächst
 The packet loss at the Conference Laptop can be explained as a combination of collisions occurring in the WLAN, packet loss at the Main Router and an increase in HTTP response traffic. From 1 to 10 web browsing clients, the video conference sees a slight decrease in its loss rate from 2\% to TODO. Around 0.5 to 2\% of this loss rate can be accounted for by the Main Router's loss rate, as illustrated in fig. \ref{fig:net_drop}. All additional packet losses may be caused by collisions in the WLAN (see fig. \ref{fig:rap_collisions}). Starting at 10 clients, the packet loss sees a steep increase, which correlates with the progress of the Main Router's packet drop rates. This increase, however, is dampened by the fact that with the number of web browsing clients, the amount of HTTP response traffic which shares the Main Router's queue with the video conference data rises as well. This way, less video data is discarded in total, as it makes up a smaller amount of the queue data.
