analyze some more

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -409,10 +409,10 @@ The throughput at different points in the network is illustrated in fig. \ref{fi
 
 Fig. \ref{fig:app_throughput} summarizes the average application throughput with regard to the number of web browsing clients present in the network. In order to analyze the influence of the FTP and web browsing applications on the video quality, it is useful to first familiarize ourselves with the behavior of these applications.
 
-\paragraph{The Web browsers} are the parameter continuously changing throughout the simulation, as detailed in section \ref{sec:sim_plan}. Figure \ref{fig:app_throughput} shows that while the average overall HTTP traffic throughput rises with the number of web browsing clients, the average throughput achieved per browser decreases. Since bandwidth is limited, the TCP congestion control of each participant will negotiate a transmission rate that avoids collisions, throttling the overall transmission speed. Fig. \ref{fig:browser_sess_dur} verifies this: The average session duration per browser increases with the number of clients. Notably, the session duration grows linearly with $\geq$ 20 clients in the network. \ref{foo}
+\paragraph{The Web browsers} are the parameter continuously changing throughout the simulation, as detailed in section \ref{sec:sim_plan}. Figure \ref{fig:app_throughput} shows that while the average overall HTTP traffic throughput rises with the number of web browsing clients, the average throughput achieved per browser decreases. Since bandwidth is limited, the TCP congestion control of each participant will negotiate a transmission rate that avoids collisions, throttling the overall transmission speed. Fig. \ref{fig:browser_sess_dur} verifies this: The average session duration per browser increases with the number of clients. According to the criteria determined in \ref{performance_characteristics}, browsing quality declines quickly: At less than 15 active clients, the quality threshold of 10 s is surpassed. Notably, the session duration grows linearly with $\geq$ 20 clients in the network.
 
 \paragraph{The FTP client}, shown in fig. \ref{fig:app_throughput} as well, experiences a %(TODO: characteristic)
-decline in throughput that is inverse to the increase in overall HTTP throughput. This can be explained with TCP's congestion control mechanisms: the more bandwidth is used by web browsing clients, the more the FTP client is forced to react by limiting its bandwidth in order to avoid collisions. In short: the FTP client will use up as much bandwidth as you let them.
+decline in throughput that is inverse to the increase in overall HTTP throughput. This also can be explained with TCP's congestion control mechanisms: the more bandwidth is used by web browsing clients, the more the FTP client is forced to react by limiting its bandwidth in order to avoid collisions. In short: the FTP client will use up as much bandwidth as you let them. It can be argued that the decrease in bandwidth is not as much of a nuisance as it is for the web browser users, since large file transfers are expected to take a while anyway.
 
 \begin{figure*}[!ht]%
 \makebox[\linewidth][c]{%
