--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -384,17 +384,30 @@ The steep increase of the drop rate at the main router indicates the impact of t
 
 These effects however have no impact on the drop rates of the WLAN. The monotonous increase is just due to the rising number of participants in the WLAN network causing more packets to be dropped.
 
-\subsection{Network without CCTV}
-As a second measure, the same simulations were conducted without any CCTV infrastructure present. This section analyzes the simulation results of this configuration. First, the overall network behavior is discussed. Then, it focuses on the influence of FTP and web browsing applications on the video conference. Finally, possible bottlenecks are identified.
-
-\subsubsection{Overall network behavior}
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=\textwidth]{Figures/nocctv/Network_Throughputs.png}
   \caption{Average network throughputs} \label{fig:net_throughput}
 \end{figure}
 
-The throughput at different points in the network is illustrated in fig. \ref{fig:net_throughput}. It can be observed that the radio link is never at full capacity. The traffic towards the Main Campus represents the sum of the FTP upload, HTTP requests and video conference traffic from conference laptop to professor. The traffic towards the Remote campus represents the sum of HTTP responses and video conference data from the professor's laptop towards the conference laptop. It can be seen that the throughputs are mostly inverse to each other, forming a steady ceiling of about 10 Mbit/s for $\geq$ 30 clients.
+\subsection{Network without CCTV}
+As a second measure, the same simulations were conducted without any CCTV infrastructure present. This section analyzes the simulation results of this configuration. First, the overall network behavior is discussed. Then, it focuses on the influence of FTP and web browsing applications on the video conference. Finally, possible bottlenecks are identified.
+
+\subsubsection{Overall network behavior}
+
+The throughput at different points in the network is illustrated in fig. \ref{fig:net_throughput}. It can be observed that the radio link is never at full capacity. The traffic towards the Main Campus represents the sum of the FTP upload, HTTP requests and video conference traffic from conference laptop to professor. The traffic towards the Remote campus represents the sum of HTTP responses and video conference data from the professor's laptop towards the conference laptop. It can be seen that the throughputs are mostly inverse to each other, forming a steady ceiling of about 10 Mbit/s for $\geq$ 30 clients.\\
+
+\begin{figure*}[!ht]%
+\makebox[\linewidth][c]{%
+    \centering
+    \subfloat[Average queue length\label{fig:rap_queue_len}]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Average_Queue_Lengths.png} }}\hspace{-2.5em}%
+    \subfloat[Number of collisions in the WLAN \label{fig:rap_collisions}]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Collisions_at_Access_Point.png} }}%
+  }
+    \caption{Remote Access Point data}%
+    \label{fig:rap_data}%
+\end{figure*}
+
+Due to the aforementioned ceiling, it is worthwhile to inspect the WLAN and the Remote Access Point serving it more closely. As fig. \ref{fig:rap_queue_len} shows, the Remote Access Point queue length, i.e. the amount of data waiting to be sent to the WLAN clients, is the longest quickly after more than 5 HTTP clients have joined the network.
 
 \begin{figure*}[!ht]%
 \makebox[\linewidth][c]{%
@@ -424,8 +437,7 @@ decline in throughput that is inverse to the increase in overall HTTP throughput
     \label{fig:conf_data}%
 \end{figure*}
 
-% TODO: video conf is udp!! ->fire & forget emphaszien
-\paragraph{The video conference} has to be looked at as two distinct data flows: one going from the professor's laptop to the video conference laptop, and one traveling the other way. This becomes apparent when looking at fig. \ref{fig:conf_data}, which depicts the average packet loss rate and delay for both directions in relation to the number of web browsing clients in the network.\\
+\paragraph{The video conference} has to be looked at as two distinct data flows: one going from the professor's laptop to the video conference laptop, and one traveling the other way. This becomes apparent when looking at fig. \ref{fig:conf_data}, which depicts the average packet loss rate and delay for both directions in relation to the number of web browsing clients in the network. Note that the video conference is a UDP application periodically sending packets of a fixed size, and thus unaware of congestion or collisions.\\
 Since it is known that the that the delays of the radio and DFN links are 10 and 5 seconds respectively, all application delays must be at least 15s. While the delay at the professor's laptop stays very close to this ideal value and only increases marginally when adding new clients, the delay at the conference laptop appears to grow logarithmically. This can be explained by examining the average queue length at the remote access point (see fig. \ref{fig:rap_queue_len}): With an increased number of web browsing clients receiving large HTTP responses, the amount of data being sent from the access point into the WLAN increases as well. In combination with the outgoing traffic of the FTP client, increased contention for the wireless medium causes incoming data to aggregate at the access point, resulting in a higher delay at the conference laptop.\\
 % TODO: anhand des netzwerks ableiten dass die queue aus gründen logarithmisch (und nciht zB quadratisch) wächst
 The packet loss at the Conference Laptop can be explained as a combination of collisions occurring in the WLAN, packet loss at the Main Router and an increase in HTTP response traffic. From 1 to 10 web browsing clients, the video conference sees a slight decrease in its loss rate from 2\% to TODO. Around 0.5 to 2\% of this loss rate can be accounted for by the Main Router's loss rate, as illustrated in fig. \ref{fig:net_drop}. All additional packet losses may be caused by collisions in the WLAN (see fig. \ref{fig:rap_collisions}). Starting at 10 clients, the packet loss sees a steep increase, which correlates with the progress of the Main Router's packet drop rates. This increase, however, is dampened by the fact that with the number of web browsing clients, the amount of HTTP response traffic which shares the Main Router's queue with the video conference data rises as well. This way, less video data is discarded in total, as it makes up a smaller amount of the queue data.
@@ -433,6 +445,13 @@ The packet loss at the Conference Laptop can be explained as a combination of co
 
 \subsubsection{Identified bottlenecks}
 % TODO: concrete value for max WLAN throughput
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[width=\textwidth]{Figures/nocctv/Network_Packet_Drop_Rates.png}
+  \caption{Packet drop rates at different points in the network} \label{fig:net_drop}
+\end{figure}
+
+
 The main bottleneck is the WLAN: as can be seen in fig. \ref{fig:net_throughput}, its throughput stagnates around 10 Mbit/s, staying below the 12 Mbit/s the radio link would theoretically be capable of transmitting. However, even the radio link itself is not fully occupied. One cause for this may be the drop rate of the Main Router that can be seen in fig. \ref{fig:net_drop} in combination with the increasing session durations shown in fig. \ref{fig:browser_sess_dur}: Until its peak at 20 web browsing laptops, the Main Router is confronted with more traffic caused by HTTP responses and video conference data flowing from the professor to the remote site than it can handle. After 20 clients, the increased session duration has caused an overall smaller number of sessions to be active, resulting in fewer data to be transmitted by the Main Router through the radio link. While this relieves the Main Router's queue, it also decreases the overall throughput of the radio link.
 
 \subsubsection{Maxmimum number of web browsing clients}
@@ -441,25 +460,6 @@ Assuming client packet loss is linear starting at 10 clients, the video conferen
 Even at 60 clients, the Client delay does not significantly exceed half of the permitted maximum delay of 100 ms, as can be seen in Fig. \ref{}. When assuming logarithmic growth, unacceptable packet loss rates will occur long before the maximum delay threshold is reached. \\
 
 When taking the students' web browsing experience into account, however, the maximum number of clients is reached far quicker with the current setup. The acceptable response time of 10s is already reached with \textless 15 clients, as can be seen in fig. \ref{fig:browser_sess_dur}.% TODO: calculate exact number
-
-
-\begin{figure}[!ht]
-  \centering
-  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Average_Queue_Lengths.png}
-  \caption{Average queue length at the remote access point} \label{fig:rap_queue_len}
-\end{figure}
-
-\begin{figure}[!ht]
-  \centering
-  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Network_Packet_Drop_Rates.png}
-  \caption{Packet drop rates at different points in the network} \label{fig:net_drop}
-\end{figure}
-\begin{figure}[!ht]
-  \centering
-  \includegraphics[width=0.6\textwidth]{Figures/nocctv/Collisions_at_Access_Point.png}
-  \caption{Number of collisions in the WLAN, counted by the Remote Access Point} \label{fig:rap_collisions}
-\end{figure}
-
 
 
 \section{Recommended Changes To The Network}
