fix more things

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -430,7 +430,7 @@ decline in throughput that is inverse to the increase in overall HTTP throughput
 \begin{figure*}[!ht]%
 \makebox[\linewidth][c]{%
     \centering
-    \subfloat[Packet loss rates]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Application_Packet_Loss_Rates.png} }}\hspace{-2.5em}%
+    \subfloat[Packet loss rates\label{fig:ploss}]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Application_Packet_Loss_Rates.png} }}\hspace{-2.5em}%
     \subfloat[Delays]{{\includegraphics[width=0.85\textwidth]{Figures/nocctv/Application_Packet_Delays.png} }}%
   }
     \caption{Average packet loss and delays of the video conference}%
@@ -440,7 +440,7 @@ decline in throughput that is inverse to the increase in overall HTTP throughput
 \paragraph{The video conference} has to be looked at as two distinct data flows: one going from the professor's laptop to the video conference laptop, and one traveling the other way. This becomes apparent when looking at fig. \ref{fig:conf_data}, which depicts the average packet loss rate and delay for both directions in relation to the number of web browsing clients in the network. Note that the video conference is a UDP application periodically sending packets of a fixed size, and thus unaware of congestion or collisions.\\
 Since it is known that the that the delays of the radio and DFN links are 10 and 5 seconds respectively, all application delays must be at least 15s. While the delay at the professor's laptop stays very close to this ideal value and only increases marginally when adding new clients, the delay at the conference laptop appears to grow logarithmically. This can be explained by examining the average queue length at the remote access point (see fig. \ref{fig:rap_queue_len}): With an increased number of web browsing clients receiving large HTTP responses, the amount of data being sent from the access point into the WLAN increases as well. In combination with the outgoing traffic of the FTP client, increased contention for the wireless medium causes incoming data to aggregate at the access point, resulting in a higher delay at the conference laptop.\\
 % TODO: anhand des netzwerks ableiten dass die queue aus gründen logarithmisch (und nciht zB quadratisch) wächst
-The packet loss at the Conference Laptop can be explained as a combination of collisions occurring in the WLAN, packet loss at the Main Router and an increase in HTTP response traffic. From 1 to 10 web browsing clients, the video conference sees a slight decrease in its loss rate from 2\% to TODO. Around 0.5 to 2\% of this loss rate can be accounted for by the Main Router's loss rate, as illustrated in fig. \ref{fig:net_drop}. All additional packet losses may be caused by collisions in the WLAN (see fig. \ref{fig:rap_collisions}). Starting at 10 clients, the packet loss sees a steep increase, which correlates with the progress of the Main Router's packet drop rates. This increase, however, is dampened by the fact that with the number of web browsing clients, the amount of HTTP response traffic which shares the Main Router's queue with the video conference data rises as well. This way, less video data is discarded in total, as it makes up a smaller amount of the queue data.
+The packet loss at the Conference Laptop can be explained as a combination of collisions occurring in the WLAN, packet loss at the Main Router and an increase in HTTP response traffic. From 1 to 10 web browsing clients, the video conference sees a slight decrease in its loss rate from 2\% to TODO. Around 0.5 to 2\% of this initial loss rate can be accounted for by the Main Router's loss rate, as illustrated in fig. \ref{fig:net_drop}. All additional packet losses may be caused by collisions in the WLAN (see fig. \ref{fig:rap_collisions}). Starting at 10 clients, the packet loss sees a steep increase, which correlates with the progress of the Main Router's packet drop rates. This increase, however, is dampened by the fact that with the number of web browsing clients, the amount of HTTP response traffic which shares the Main Router's queue with the video conference data rises as well. This way, less video data is discarded in total, as it makes up a smaller amount of the queue data.
 % TODO: weniger schwammig.
 
 \subsubsection{Identified bottlenecks}
@@ -457,7 +457,7 @@ The main bottleneck is the WLAN: as can be seen in fig. \ref{fig:net_throughput}
 \subsubsection{Maxmimum number of web browsing clients}
 When the video conference is key,the maximum number of web browsing clients is reached when either the average packet loss exceeds the maximum of 5\% or the average delay exceeds the maximum of 100 ms.\\
 Assuming client packet loss is linear starting at 10 clients, the video conference packet loss will exceed its maximum when $\geq$ 90 web browsing clients are present.
-Even at 60 clients, the Client delay does not significantly exceed half of the permitted maximum delay of 100 ms, as can be seen in Fig. \ref{}. When assuming logarithmic growth, unacceptable packet loss rates will occur long before the maximum delay threshold is reached. \\
+ Even at 60 clients, the delay measured at the Conference Laptop does not significantly exceed half of the permitted maximum delay of 100 ms, as can be seen in Fig. \ref{fig:ploss}.When assuming logarithmic growth, unacceptable packet loss rates will occur long before the maximum delay threshold is reached. \\
 
 When taking the students' web browsing experience into account, however, the maximum number of clients is reached far quicker with the current setup. The acceptable response time of 10s is already reached with \textless 15 clients, as can be seen in fig. \ref{fig:browser_sess_dur}.% TODO: calculate exact number
 
