re-add noun project attribution

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -91,8 +91,10 @@ In this report we evaluated a remote campus network connected to the main campus
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=\textwidth]{Figures/network.pdf}
-  \caption{The Network Setup as simulated.} \label{fig:network}
+  \caption[asdf]{The Network Setup as simulated.\footnotemark} \label{fig:network}
 \end{figure}
+
+\footnotetext{all icons by Icon Fair from the Noun Project.}
 
 To analyze the desired network setup, simulations were conducted. The simulated network was set up as illustrated in fig. \ref{fig:network}. The following section discusses the implementation of the simulation and its configurations.
 
