report: fix figure name (just to be sure)

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -91,7 +91,7 @@ In this report we evaluated a remote campus network connected to the main campus
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=\textwidth]{Figures/network.pdf}
-  \caption[asdf]{The Network Setup as simulated.\footnotemark} \label{fig:network}
+  \caption[The Network Setup as simulated.]{The Network Setup as simulated.\footnotemark} \label{fig:network}
 \end{figure}
 
 \footnotetext{all icons by Icon Fair from the Noun Project.}
